--- a/style.css
+++ b/style.css
@@ -1,8 +1,34 @@
-body {
-    background-color: darkslategray;
+html {
+    background-color: #07081b;
+    background-image: url("assets/background.png");
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+body, html {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+.wrapper {
+    height: 100%;
+    max-width: 1170px;
+    margin: 0 auto;
+    background: #07081b;
+    border: 5px solid aliceblue;
+}
+
+hr.custom {
+    border: 0.5px solid white;
 }
 
 h1 {
     color: aliceblue;
     text-align: center;
+}
+
+h2 {
+    color: aliceblue;
+    text-align: center;
+    font-size: 30px;
 }
