--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
     background-color: #07081b;
-    background-image: url("assets/background.png");
+    background-image: url("assets/background_fin.png");
     background-size: cover;
     background-attachment: fixed;
 }
@@ -8,14 +8,61 @@ html {
 body, html {
     height: 100%;
     font-family: 'Titillium Web', sans-serif;
+    color: aliceblue;
+    text-align: center;
+}
+
+.parent {
+    padding: 27px;
 }
 
 .wrapper {
-    height: 100%;
+    height: auto;
     max-width: 1170px;
-    margin: 0 auto;
+    margin: auto auto;
     background: #07081b;
     border: 5px solid aliceblue;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 5% auto 300px 5%;
+    grid-template-rows: auto;
+    padding: 5%;
+    grid-gap: 40px;
+}
+
+.container-1 {
+    grid-column: 2 /span 1;
+    grid-row: 1 /span 1;
+
+    text-align: center;
+}
+
+.container-2 {
+    grid-column: 3 /span 1;
+    grid-row: 1 / span 1;
+    align-content: center;
+}
+
+.grid-container-2 {
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 10% auto 10%;
+    padding: 50px;
+}
+
+.container-2-1 {
+    grid-column: 2 /span 1;
+    grid-row: 1 / span 1;
+    align-content: center;
+}
+
+.imgStyle {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    object-fit: contain;
 }
 
 hr.custom {
@@ -23,12 +70,18 @@ hr.custom {
 }
 
 h1 {
-    color: aliceblue;
-    text-align: center;
+    font-size: 40px;
 }
 
 h2 {
-    color: aliceblue;
-    text-align: center;
     font-size: 30px;
+}
+
+.p1 {
+    font-size: 23px;
+}
+
+ul.custom {
+    font-size: 20px;
+    list-style-type: none;
 }
