--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
     background-color: #07081b;
-    background-image: url("assets/background_fin.png");
+    background-image: url("assets/background_finw.png");
     background-size: cover;
     background-attachment: fixed;
 }
@@ -10,6 +10,28 @@ body, html {
     font-family: 'Titillium Web', sans-serif;
     color: aliceblue;
     text-align: center;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+::-webkit-scrollbar-thumb {
+    background: #555785;
+    border: 0px none #ffffff;
+    border-radius: 50px;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #6f71a5;
+}
+
+::-webkit-scrollbar-track {
+    background: #1d1e35;
+    border: 0px none #ffffff;
+    border-radius: 50px;
+}
+::-webkit-scrollbar-track:hover {
+    background: #23233b;
 }
 
 .parent {
@@ -52,7 +74,22 @@ body, html {
     padding: 50px;
 }
 
+.grid-container-2-bottom {
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 10% auto 10%;
+    padding-top: 10px;
+    padding-right: 50px;
+    padding-left: 50px;
+}
+
 .container-2-1 {
+    grid-column: 2 /span 1;
+    grid-row: 1 / span 1;
+    align-content: center;
+}
+
+.container-2-2 {
     grid-column: 2 /span 1;
     grid-row: 1 / span 1;
     align-content: center;
@@ -79,6 +116,11 @@ h2 {
 
 .p1 {
     font-size: 23px;
+}
+
+.p2 {
+    font-size: 18px;
+    color: #555785;
 }
 
 ul.custom {
